[FIX] web_enterprise: scroll in list view with search panel on mobile
When a list view has a (left) search panel and the content is too wide
for the screen (like on mobile), a page-wide horizontal scroll is
triggered.

This commit fixes it by forcing the list view to match the viewport's
width, forcing the scroll only for its content.

Task ID: 2185145

closes odoo/enterprise#9549

--- a/web_enterprise/static/src/scss/search_panel_mobile.scss
+++ b/web_enterprise/static/src/scss/search_panel_mobile.scss
@@ -24,6 +24,10 @@
     .o_controller_with_searchpanel {
         flex-direction: column;
 
+        .o_renderer_with_searchpanel.o_list_view {
+            width: 100%;
+        }
+
         details.o_search_panel {
             flex-basis: auto;
             height: auto;
